components/App/App.css
@import url('../../theme/vars.css');
@import url('../../theme/fonts.css');

html {
  font-family: theme-font, sans-serif;
  font-size: 81.25%;  /* 13px */
  line-height: 1.5;
  color: color(var(--background-color) contrast(0%));
  background: var(--background-color);
  text-rendering: optimizeLegibilty;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

footer,
header,
nav,
section {
  display: block;
}

a {
  transition: color .15s;
  text-decoration: none;
  color: var(--link-color);
  outline: 0;
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
}

a:visited {
  color: var(--link-color);
}

a:focus {
  transition: none;
  color: color(var(--link-color) lightness(-15%));
}

a:hover {
  transition: none;
  color: color(var(--link-color) lightness(-15%));
}

a:active {
  transition: none;
  color: var(--theme-color);
}

abbr[title] {
  border-bottom: none;
  text-decoration: none;
}

h1,
h2,
h3 {
  font-weight: normal;
  margin: 1.5rem 0;
  color: color(var(--background-color) contrast(100%));
}

h1 {
  font-size: var(--great-primer);
  line-height: 1;
}

h2 {
  font-size: var(--english);
  line-height: 1;
}

h3 {
  font-size: var(--pica);
  margin-bottom: 0;
}

p {
  margin: 1.5rem 0;
}

h3 + p,
h3 + ul {
  margin-top: 0;
}

ul {
  margin: 1.5rem 0;
  padding: 0;
  list-style: none;
}

strong {
  font-weight: normal;
  color: color(var(--background-color) contrast(100%));
}

small {
  font-size: 80%;
  color: color(var(--background-color) contrast(0%));
}

time {
  font-size: 80%;
}

img {
  display: block;
  transition: box-shadow .15s;
  border: 1px solid color(var(--background-color) contrast(100%) lightness(85%));
  box-shadow: 0 4px 8px color(var(--background-color) contrast(100%) a(20%));
}

a:focus img,
a:hover img {
  box-shadow: 0 4px 8px color(var(--background-color) contrast(100%) a(10%));
}

.App {
  max-width: 400px;
  margin: 0 auto;
  padding: 0 1.5rem;
}

@media (--larger-viewport) {
  .App {
    max-width: 600px;
  }
}

